--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,117 @@
 * * * * * * * * * { background-color: rgba(0,0,255,.2); }
 
 body {
-    .gradient {
-        background-color: #134d71;
-        background-image: linear-gradient(#134d71, #78a7c6, #f7e4bf);
-        align: center;
-      }
-    
+    background-color: #134d71;
+    background-image: linear-gradient(#134d71, #78a7c6, #f7e4bf);
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-size: cover;
+    margin: 0;
+    width: 100%;
+    height: 100%;
   }
 
-header {
+.wrap-header {
+    display: flex;
+    justify-content: center;
+    /* justify-content: space-around; */
+    /* flex-direction: column; */
+    /* align-items: center;
+    text-align: center; */
     font-family: 'Quicksand', sans-serif;
     font-size: 30px;
     color: #ffffff;
-    text-align: center;
+    font-weight: bold;
+}
+
+header {
+    display: flex;
+    padding-top: 30px;
+    font-weight: bold;
+    /* justify-content: space-around; */
+    /* display: flex;
+    justify-content: center; */
+    /* display: block; */
+    /* align-items: center;
+    text-align: center; */
+    /* font-family: 'Quicksand', sans-serif;
+    font-size: 30px;
+    color: #ffffff; */
+}
+
+.wrap-message-select {
+    display: flex;
+    justify-content: center;
+    align-items: space-evenly;
+}
+
+.message-select {
+    font-family: 'Quicksand', sans-serif;
+    background-color: white;
+    display: flex;
+    /* flex-direction: column; */
+    /* text-align: center;  */
+    /* align-items: space-evenly; */
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px; 
+    width: 600px;
+    height: 100px;
+}
+
+#choose-message {
+    font-weight: bold;
+}
+
+#form {
+    width: 550px;
+    display: block;
+    justify-content: center;
+}
+
+.radio-buttons {
+    display: inline-flex;
+    align-items: space-evenly;
+}
+
+button {
+    background-color: #134d71;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+}
+
+.wrap-message-view {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.message-view {
+    font-family: 'Quicksand', sans-serif;
+    background-color: white;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    /* align-items: space-evenly; */
+    justify-content: center;
+    width: 800px;
+    height: 100px;
+    border-radius: 10px;
+    /* width: 550px;
+    height: 100px;
+} */
+
+#meditator {
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
 }
 
 /* div {
