--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* { background-color: rgba(255,0,0,.2); }
+/* * { background-color: rgba(255,0,0,.2); }
 * * { background-color: rgba(0,255,0,.2); }
 * * * { background-color: rgba(0,0,255,.2); }
 * * * * { background-color: rgba(255,0,255,.2); }
@@ -6,26 +6,21 @@
 * * * * * * { background-color: rgba(255,255,0,.2); }
 * * * * * * * { background-color: rgba(255,0,0,.2); }
 * * * * * * * * { background-color: rgba(0,255,0,.2); }
-* * * * * * * * * { background-color: rgba(0,0,255,.2); }
+* * * * * * * * * { background-color: rgba(0,0,255,.2); } */
+html {
+    height: 100%;
+}
 
 body {
     background-color: #134d71;
     background-image: linear-gradient(#134d71, #78a7c6, #f7e4bf);
     background-repeat: no-repeat;
-    /* background-attachment: fixed; */
     background-size: cover;
-    margin: 0;
-    width: 100%;
-    height: 100%;
   }
 
 .wrap-header {
     display: flex;
     justify-content: center;
-    /* justify-content: space-around; */
-    /* flex-direction: column; */
-    /* align-items: center;
-    text-align: center; */
     font-family: 'Quicksand', sans-serif;
     font-size: 30px;
     color: #ffffff;
@@ -36,99 +31,93 @@ header {
     display: flex;
     padding-top: 30px;
     font-weight: bold;
-    /* justify-content: space-around; */
-    /* display: flex;
-    justify-content: center; */
-    /* display: block; */
-    /* align-items: center;
-    text-align: center; */
-    /* font-family: 'Quicksand', sans-serif;
-    font-size: 30px;
-    color: #ffffff; */
 }
 
 .wrap-message-select {
     display: flex;
     justify-content: center;
-    align-items: space-evenly;
+    align-items: center;
+    padding-bottom: 90px;
+    padding-top: 0px;
+    /* display: inline-flex; */
 }
 
 .message-select {
     font-family: 'Quicksand', sans-serif;
     background-color: white;
-    display: flex;
-    /* flex-direction: column; */
-    /* text-align: center;  */
-    /* align-items: space-evenly; */
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     border-radius: 10px; 
     width: 600px;
     height: 100px;
+    display: inline-flex;
+}
+
+.wrap-choose-message {
+    display: flex;
+    justify-content: center;
 }
 
 #choose-message {
+    padding-top: 100px;
     font-weight: bold;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 20px;
+    color: #ffffff;
 }
 
 #form {
     width: 550px;
-    display: block;
-    justify-content: center;
 }
 
 .radio-buttons {
     display: inline-flex;
-    align-items: space-evenly;
+    padding: 20px;
+    /* align-items: space-evenly; */
+
 }
+
+/* .affirmation {
+    padding-left: 40px; 
+}
+
+.mantra {
+    padding: 20px;
+} */
 
 button {
     background-color: #134d71;
     color: white;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
     border-radius: 4px;
+    margin: 10px;
 }
 
 .wrap-message-view {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-items: space-evenly;
+    justify-content: space-evenly;
 }
 
 .message-view {
     font-family: 'Quicksand', sans-serif;
     background-color: white;
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
-    /* align-items: space-evenly; */
     justify-content: center;
     width: 800px;
-    height: 100px;
+    height: 150px;
     border-radius: 10px;
-    /* width: 550px;
-    height: 100px;
-} */
-
+}
 #meditator {
-    display: flex; 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 50px;
     height: 50px;
 }
 
-/* div {
-    height: 250px;
-    background-color: #ff8a00;
-    background-image: linear-gradient(#ff8a00, #e52e71);
-  } */
-
-
+.hidden {
+    display: none;
+  }
 
 /* font-family: 'Quicksand', sans-serif;
 COLORS
